deploy/integrations/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: confluence
spec:
  hosts:
  - confluence.dev.dsop.io
  gateways:
  - istio-ingressgateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: confluence.confluence.svc.cluster.local
        port:
          number: 8090
      headers:
        request:
          remove:
            - x-b3-sampled
          add: 
            x-b3-sampled: '0'
